dashboard: currency fixed edit mode layout shift

--- a/src/components/views/dashboard/currency/styles.module.scss
+++ b/src/components/views/dashboard/currency/styles.module.scss
@@ -60,7 +60,7 @@
 // EDIT MODE
 
 .preview {
-  margin-top: 7px;
+  margin-top: 9px;
   font-size: 30px;
   line-height: 30px;
   display: flex;
